--- a/_config.yml
+++ b/_config.yml
@@ -208,6 +208,11 @@ date_format: "%B %-d, %Y"
 # Facebook App ID
 #fb_app_id: ""
 
+gems: [jekyll-paginate]
+paginate: 5
+paginate_path: "blog/page:num"
+excerpt_length: 50
+
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
