--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@
 # set up your website you should go through all these settings and edit them, but after
 # the initial set up you won't need to come back to this file often.
 
+url: "http://yuwchen.github.io"
+baseurl: ""
+
 # --- Required options --- #
 
 # Name of website
