--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,12 @@ baseurl: ""
 title: Yu-Wen Chen
 
 # Your name to show in the footer
-author: Some Person
-
+author: Yu-
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   Blog: "blog"
+  Resume / CV: "yuwen_CV.pdf"
   #Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   #  - Learn markdown: "https://www.markdowntutorial.com/"
@@ -42,9 +42,11 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
+  email: "kuluychen@gmail.com"
+  github: yuwchen
+  linkedin: yuwenchen
+#  facebook: deanattali
+#  github: daattali
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  twitter: daattali
 #  patreon: DeanAttali
