--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""
 title: Yu-Wen Chen
 
 # Your name to show in the footer
-author: Yu-
+author: Yu-Wen Chen
 # --- List of links in the navigation bar --- #
 
 navbar-links:
